--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TaskManager.NoActionBar"
+        android:theme="@style/Theme.AppCompat.Light"
         android:allowBackup="true">
         <activity android:name=".AddActivity"/>
         <activity android:name=".GoalActivity"/>
